Fixed an issue with left-side-div container on login page, on mobile devices when input fields where active the height of the container was too small, because of the height property which was set to 100 viewport height, so to fix this issue i calculated the height of the window and set its value as a height of left-side-div, now when input fields are active and users start typing the height of the container is normal and does not cause any issues.

--- a/static/css/account_css/account.css
+++ b/static/css/account_css/account.css
@@ -4,9 +4,17 @@
     padding: 0;
 }
 
+body {
+    background-color: #f1f1f1;
+}
+
 a {
     text-decoration: none;
     color: black;
+}
+
+.content {
+    height: 100vh;
 }
 
 .hidden {
@@ -38,12 +46,11 @@ a {
 
 .left-side-div {
     width: 100vw;
-    height: 100vh;
     position: relative;
+    background-color: #f1f1f1;
 }
 
 .grid {
-    /* pointer-events: none; */
     position: absolute;
     width: 100%;
     height: 100%;
@@ -54,7 +61,6 @@ a {
 
 .grid__item {
     position: relative;
-    /* transition: all .25s ease-in-out */
 }
 
 .grid__item-img {
@@ -63,7 +69,6 @@ a {
     height: 100%;
     background-size: cover;
     background-position: 50% 50%;
-    /* border: 1px solid black; */
     transition: all 0.25s ease-in-out;
 }
 
@@ -128,9 +133,10 @@ input {
     font-size: clamp(0.8rem, 4vw, 1.25rem);
     padding: clamp(5px, 2.5vw, 10px);
     font-family: "Poppins", cursive;
-    border: none;
+    border: 1px solid #f1f1f1;
     border-bottom: 1px solid #838383;
     margin-bottom: clamp(10px, 4vw, 20px);
+    margin-top: 5px;
     background-color: #f1f1f1;
     border-radius: 0px;
     width: 100%;
@@ -141,10 +147,6 @@ input:active {
     width: 100%;
     border: 1px solid #838383;
     border-radius: 5px;
-}
-
-.left-side-div {
-    background-color: #f1f1f1;
 }
 
 .left-side-div-inner {
@@ -297,21 +299,39 @@ li {
         margin-bottom: clamp(25px, 7.5vw, 50px);
     }
 
-    .social-auth, .form-btn, .median-line, .form-footer{
-        font-size: 12px;
+
+    .form-btn, .median-line, .form-footer, .forgot-password{
+        font-size: 10px;
+    }
+
+    .form-btn {
+        padding: 5px 10px;
     }
 
     .forgot-password {
         font-size: 10px;
     }
 
+    .social-auth {
+        font-size: 10px;
+        padding: 5px 10px;
+    }
+
     .social-auth img {
-        width: 15px;
+        width: 10px;
     }
 
     .form-main input {
-        font-size: 12px;
+        font-size: 10px;
     } 
+
+    .form-main {
+        gap: 15px;
+    }
+
+    li {
+        font-size: 10px;
+    }
 }
 
 @media only screen and (min-width: 767px) and (max-width: 1100px) {
@@ -435,8 +455,6 @@ li {
         cursor: pointer;
         margin: 20px 0 0 0;
     }
-    
-
 }
 
 @media only screen and (min-width: 1101px) and (max-height: 1000px) {
